test/scc/stmt/semantic-errors/009.t
void test()
{
    while (1)
        default:
            ;
}